[package]
name = "id-pool"
version = "0.2.1"
authors = ["adamsky <adamsky@enum.space>"]
edition = "2018"
description = "Create and recycle integer ids using a ranged pool"
repository = "https://github.com/adamsky/id-pool"
keywords = ["id", "pool", "range"]
license = "MIT"

[features]
default = ["usize"]
usize = []
u64 = []
u32 = []
u16 = []

[dependencies]
serde = { version = "1.0.138", optional = true }

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "main"
harness = false
